<resources>
    <string name="app_name">s311516mappe2giantbanana.tech</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save changes</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="attendees">Attendees</string>
    <string name="friends">Friends</string>
    <string name="bookings">Bookings</string>
    <string name="SMS">SMS</string>
    <string name="SMS_toggle">Turn SMS-reminder on/off</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="new_booking">New booking</string>
    <string name="add_friend">Add friend</string>
    <string name="pick_time">Pick time</string>
    <string name="pick_date">Pick date</string>
    <string name="default_friends">--Friends--</string>
    <string name="default_restaurants">--Restaurants--</string>
    <string name="default_types">--Types--</string>
    <string name="x">X</string>
    <string name="restaurant">Restaurant</string>
    <string name="date_time">Date/Time</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="restaurants">Restaurants</string>
    <string name="friend">Friend</string>
    <string name="types">Types</string>
    <string name="description">Description</string>
    <string name="title">EatYourFriends</string>
    <string name="sms_on">Automatic SMS notification ON.</string>
    <string name="sms_off">Automatic SMS notification OFF.</string>
    <string name="set_time">Set notification time</string>
    <string name="set_message">Set notification message</string>
    <string name="settings">Settings</string>
</resources>
